[gd_scene load_steps=81 format=2]

[ext_resource path="res://player/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://player/fir_sled.png" type="Texture" id=3]
[ext_resource path="res://christmas lights.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://player/light.png" type="Texture" id=5]
[ext_resource path="res://small things/hollyberry.png" type="Texture" id=6]
[ext_resource path="res://player/hats/leaf.png" type="Texture" id=7]
[ext_resource path="res://player/hat.gd" type="Script" id=8]
[ext_resource path="res://player/effects/speedboost/speed_0001.png" type="Texture" id=9]
[ext_resource path="res://player/effects/speedboost/speed_0004.png" type="Texture" id=10]
[ext_resource path="res://player/effects/speedboost/speed_0003.png" type="Texture" id=11]
[ext_resource path="res://player/effects/speedboost/speed_0000.png" type="Texture" id=12]
[ext_resource path="res://player/effects/speedboost/speed_0002.png" type="Texture" id=13]

[sub_resource type="CanvasItemMaterial" id=67]
light_mode = 1

[sub_resource type="CapsuleShape2D" id=68]
radius = 15.197
height = 54.63

[sub_resource type="RectangleShape2D" id=69]
extents = Vector2( 13.7161, 41.6864 )

[sub_resource type="RectangleShape2D" id=70]
extents = Vector2( 31.5738, 10 )

[sub_resource type="CanvasItemMaterial" id=71]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=72]
light_mode = 1

[sub_resource type="Animation" id=73]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=74]
resource_name = "give"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 17, 18, 17, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/berry:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 64, 7 ), Vector2( 66, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/berry:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("plant/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 17, 18, 17, 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("plant/Sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=75]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=76]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=77]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=78]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=79]
resource_name = "plant_take"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 19 ]
}

[sub_resource type="Animation" id=80]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("slide:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/fir_sled:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("collision box:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("plant/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}

[sub_resource type="Animation" id=81]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("plant/Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12, 14 ]
}

[sub_resource type="AnimationNodeAnimation" id=82]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=83]
animation = "give"

[sub_resource type="AnimationNodeAnimation" id=84]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=85]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=86]
animation = "land"

[sub_resource type="AnimationNodeAnimation" id=87]
animation = "pickup"

[sub_resource type="AnimationNodeAnimation" id=88]
animation = "plant_take"

[sub_resource type="AnimationNodeAnimation" id=89]
animation = "slide"

[sub_resource type="AnimationNodeAnimation" id=90]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=91]

[sub_resource type="AnimationNodeStateMachineTransition" id=92]

[sub_resource type="AnimationNodeStateMachineTransition" id=93]

[sub_resource type="AnimationNodeStateMachineTransition" id=94]

[sub_resource type="AnimationNodeStateMachineTransition" id=95]

[sub_resource type="AnimationNodeStateMachineTransition" id=96]

[sub_resource type="AnimationNodeStateMachineTransition" id=97]

[sub_resource type="AnimationNodeStateMachineTransition" id=98]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=99]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=100]

[sub_resource type="AnimationNodeStateMachineTransition" id=101]

[sub_resource type="AnimationNodeStateMachineTransition" id=102]

[sub_resource type="AnimationNodeStateMachineTransition" id=103]

[sub_resource type="AnimationNodeStateMachineTransition" id=104]

[sub_resource type="AnimationNodeStateMachineTransition" id=105]

[sub_resource type="AnimationNodeStateMachineTransition" id=106]

[sub_resource type="AnimationNodeStateMachineTransition" id=107]

[sub_resource type="AnimationNodeStateMachineTransition" id=108]

[sub_resource type="AnimationNodeStateMachineTransition" id=109]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=110]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=111]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=112]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=113]

[sub_resource type="AnimationNodeStateMachineTransition" id=114]

[sub_resource type="AnimationNodeStateMachineTransition" id=115]

[sub_resource type="AnimationNodeStateMachineTransition" id=116]

[sub_resource type="AnimationNodeStateMachineTransition" id=117]

[sub_resource type="AnimationNodeStateMachineTransition" id=118]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=119]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=120]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=121]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=122]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=123]

[sub_resource type="AnimationNodeStateMachineTransition" id=124]

[sub_resource type="AnimationNodeStateMachineTransition" id=125]

[sub_resource type="AnimationNodeStateMachineTransition" id=126]

[sub_resource type="AnimationNodeStateMachine" id=127]
states/fall/node = SubResource( 82 )
states/fall/position = Vector2( 620, 57.5 )
states/give/node = SubResource( 83 )
states/give/position = Vector2( 89, 243.5 )
states/idle/node = SubResource( 84 )
states/idle/position = Vector2( 152.5, 159 )
states/jump/node = SubResource( 85 )
states/jump/position = Vector2( 418.5, 32.5 )
states/land/node = SubResource( 86 )
states/land/position = Vector2( 713.5, 171.938 )
states/pickup/node = SubResource( 87 )
states/pickup/position = Vector2( 195.562, 319.671 )
states/plant_take/node = SubResource( 88 )
states/plant_take/position = Vector2( 454.763, 317.652 )
states/slide/node = SubResource( 89 )
states/slide/position = Vector2( 193.5, 23.5 )
states/walk/node = SubResource( 90 )
states/walk/position = Vector2( 350.5, 107.5 )
transitions = [ "idle", "walk", SubResource( 91 ), "walk", "jump", SubResource( 92 ), "idle", "jump", SubResource( 93 ), "jump", "fall", SubResource( 94 ), "fall", "land", SubResource( 95 ), "land", "jump", SubResource( 96 ), "land", "fall", SubResource( 97 ), "land", "walk", SubResource( 98 ), "land", "idle", SubResource( 99 ), "idle", "fall", SubResource( 100 ), "walk", "fall", SubResource( 101 ), "walk", "idle", SubResource( 102 ), "idle", "slide", SubResource( 103 ), "walk", "slide", SubResource( 104 ), "slide", "idle", SubResource( 105 ), "slide", "walk", SubResource( 106 ), "land", "slide", SubResource( 107 ), "slide", "jump", SubResource( 108 ), "pickup", "idle", SubResource( 109 ), "pickup", "walk", SubResource( 110 ), "pickup", "land", SubResource( 111 ), "pickup", "slide", SubResource( 112 ), "idle", "pickup", SubResource( 113 ), "slide", "pickup", SubResource( 114 ), "walk", "pickup", SubResource( 115 ), "land", "pickup", SubResource( 116 ), "idle", "give", SubResource( 117 ), "give", "idle", SubResource( 118 ), "plant_take", "idle", SubResource( 119 ), "plant_take", "slide", SubResource( 120 ), "plant_take", "walk", SubResource( 121 ), "plant_take", "land", SubResource( 122 ), "idle", "plant_take", SubResource( 123 ), "slide", "plant_take", SubResource( 124 ), "walk", "plant_take", SubResource( 125 ), "land", "plant_take", SubResource( 126 ) ]
start_node = "idle"
graph_offset = Vector2( 82.4925, -92.7152 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=128]

[sub_resource type="DynamicFont" id=129]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="CanvasItemMaterial" id=138]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=139]
blend_mode = 1

[sub_resource type="CapsuleShape2D" id=140]
radius = 70.7058
height = 37.4508

[sub_resource type="AnimatedTexture" id=141]
flags = 4
frames = 5
frame_0/texture = ExtResource( 12 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 13 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 11 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 10 )
frame_4/delay_sec = 0.0

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
material = SubResource( 67 )
collision_mask = 0
script = ExtResource( 2 )

[node name="canstand" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="standsize" type="CollisionShape2D" parent="canstand"]
position = Vector2( 0, 11.598 )
shape = SubResource( 68 )

[node name="range" type="KinematicBody2D" parent="." groups=[
"range",
]]
collision_layer = 8
collision_mask = 8

[node name="collision box2" type="CollisionShape2D" parent="range" groups=[
"player",
]]
position = Vector2( 0, 10 )
shape = SubResource( 69 )

[node name="collision box" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( 0, 10 )
shape = SubResource( 69 )
disabled = true

[node name="slide" type="CollisionShape2D" parent="." groups=[
"player",
]]
position = Vector2( 3.27003, 44.1753 )
shape = SubResource( 70 )

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
energy = 1.2
range_layer_min = -512
range_layer_max = 2
shadow_enabled = true
shadow_gradient_length = 3.0

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
material = SubResource( 71 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 5
vframes = 5
frame = 13

[node name="berry" type="Sprite" parent="Sprite"]
visible = false
light_mask = 0
material = SubResource( 72 )
position = Vector2( 64, 7 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="fir_sled" type="Sprite" parent="Sprite"]
show_behind_parent = true
light_mask = 0
position = Vector2( 24.9562, 129.789 )
scale = Vector2( 1.2, 1 )
texture = ExtResource( 3 )
offset = Vector2( -171.609, -125.012 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 73 )
anims/give = SubResource( 74 )
anims/idle = SubResource( 75 )
anims/jump = SubResource( 76 )
anims/land = SubResource( 77 )
anims/pickup = SubResource( 78 )
anims/plant_take = SubResource( 79 )
anims/slide = SubResource( 80 )
anims/walk = SubResource( 81 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 127 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 128 )

[node name="floor_raycast" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="floor_raycast"]
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="floor_raycast"]
position = Vector2( -12, 0 )
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 4

[node name="RayCast2D3" type="RayCast2D" parent="floor_raycast"]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 4

[node name="stand_raycast" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="stand_raycast"]
position = Vector2( 12, 40 )
cast_to = Vector2( 0, -65 )
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="stand_raycast"]
position = Vector2( 0, 40 )
cast_to = Vector2( 0, -65 )
collision_mask = 4

[node name="RayCast2D3" type="RayCast2D" parent="stand_raycast"]
position = Vector2( -12, 40 )
cast_to = Vector2( 0, -65 )
collision_mask = 4

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 89.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 129 )
text = "a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="plant" type="Node2D" parent="."]
scale = Vector2( -1, 1 )
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="plant"]
light_mask = 0
material = SubResource( 138 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
hframes = 5
vframes = 5
frame = 17

[node name="Sprite2" type="Sprite" parent="plant/Sprite"]
modulate = Color( 0.454902, 0.686275, 0.533333, 0.607843 )
show_behind_parent = true
light_mask = 0
material = SubResource( 139 )
position = Vector2( 5.16804, -77.9005 )
scale = Vector2( 0.3, 0.3 )
z_index = -1
texture = ExtResource( 5 )

[node name="plant" type="KinematicBody2D" parent="plant" groups=[
"plant_range",
]]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="plant/plant"]
light_mask = 0
shape = SubResource( 140 )

[node name="plant_area" type="Area2D" parent="plant"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="plant/plant_area"]
light_mask = 0
shape = SubResource( 140 )

[node name="speedboost" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.270588 )
show_behind_parent = true
position = Vector2( 0, -15 )
texture = SubResource( 141 )

[connection signal="area_entered" from="canstand" to="." method="_on_canstand_area_entered"]
[connection signal="area_exited" from="canstand" to="." method="_on_canstand_area_exited"]
[connection signal="body_entered" from="canstand" to="." method="_on_canstand_body_entered"]
[connection signal="body_exited" from="canstand" to="." method="_on_canstand_body_exited"]
[connection signal="area_entered" from="plant/plant_area" to="." method="_on_plant_area_area_entered"]
[connection signal="area_exited" from="plant/plant_area" to="." method="_on_plant_area_area_exited"]
